2005-09-10  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am, runtest.sh: Use a "testresuilt/" directory in build
	tree rather than overloading "testsuite/".
	* TODO: Removed obsoleted file.
	* Makefile.in: Regenerated.

2005-09-07  Martin Hunt  <hunt@redhat.com>

	* stap.1.in: Document current "-c" and "-x" options.

2005-09-07  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.spec.in: Remove kernel-debuginfo dependency.

2005-09-07  Frank Ch. Eigler  <fche@redhat.com>

	* main.cxx (main): Choose getpid()-based module names.
	* tapsets.cxx: Make timer.jiffies' use of task_pt_regs __i386__-only.

2005-09-07  Frank Ch. Eigler  <fche@redhat.com>

	* stap.1.in: Oops, && and || do short-circuit.

2005-09-06  Frank Ch. Eigler  <fche@elastic.org>

	* stap.1.in: Clarify absence of short-circuiting in && and ||.
	* translate.cxx (emit_function): Improve "array locals" message.
	* tapset/timestamp.stp: Add gettimeofday_us function.  Correct
	arithmetic typing in other functions.
	* stapfuncs.5.in: Document new function.

2005-09-06  Martin Hunt  <hunt@redhat.com>

	* systemtap.spec.in: Bump elfutils_version to .115.

2005-09-05  Roland McGrath  <roland@redhat.com>

	* loc2c.h: Comment fix.

2005-09-06  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Require elfutils 0.115+.
	* tapsets.cxx: Restore graydon's PR 1244 code.
	* testsuite/buildok/eighteen.stp: Correct typing.
	* configure: Regenerated.

2005-09-06  Martin Hunt  <hunt@redhat.com>

	* tapset/context.stp: Add function target().
	* stapfuncs.5.in (target): Document it.
	* elaborate.h (struct systemtap_session): Add cmd and target_pid to
	the struct.
	* main.cxx (usage): Add descriptions of "-c" and "-x" options.
	(main): Set s.cmd and s.target_pid.
	* buildrun.cxx (stringify): Copy this utility func here too.
	(run_pass): Add new options to set cmd and pid to the stpd
	command line.

2005-09-06  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (emit_probe_entries): Disable fault_handler for now.
